[gd_scene load_steps=52 format=2]

[ext_resource path="res://Script/Player.gd" type="Script" id=1]
[ext_resource path="res://personagem principal/run_menor3.png" type="Texture" id=2]
[ext_resource path="res://personagem principal/idle.png" type="Texture" id=3]
[ext_resource path="res://personagem principal/run_menor4.png" type="Texture" id=4]
[ext_resource path="res://personagem principal/run_menor5.png" type="Texture" id=5]
[ext_resource path="res://personagem principal/run_menor1.png" type="Texture" id=6]
[ext_resource path="res://personagem principal/run_menor2.png" type="Texture" id=7]
[ext_resource path="res://personagem principal/run_menor6.png" type="Texture" id=8]
[ext_resource path="res://personagem principal/dash2.png" type="Texture" id=9]
[ext_resource path="res://personagem principal/dash1.png" type="Texture" id=10]
[ext_resource path="res://personagem principal/dash3.png" type="Texture" id=11]
[ext_resource path="res://personagem principal/dash4.png" type="Texture" id=12]
[ext_resource path="res://personagem principal/dash5.png" type="Texture" id=13]
[ext_resource path="res://personagem principal/dash6.png" type="Texture" id=14]
[ext_resource path="res://personagem principal/jump4.png" type="Texture" id=15]
[ext_resource path="res://personagem principal/jump1.png" type="Texture" id=16]
[ext_resource path="res://personagem principal/jump3.png" type="Texture" id=17]
[ext_resource path="res://personagem principal/jump2.png" type="Texture" id=18]
[ext_resource path="res://personagem principal/dash_rewind4.png" type="Texture" id=19]
[ext_resource path="res://personagem principal/dash_rewind1.png" type="Texture" id=20]
[ext_resource path="res://personagem principal/dash_rewind2.png" type="Texture" id=21]
[ext_resource path="res://personagem principal/dash_rewind3.png" type="Texture" id=22]
[ext_resource path="res://personagem principal/dash_rewind5.png" type="Texture" id=23]
[ext_resource path="res://personagem principal/dash_rewind.6png.png" type="Texture" id=24]
[ext_resource path="res://efeito sonoros/DLMKRJN-ninja-jump (mp3cut.net).mp3" type="AudioStream" id=25]
[ext_resource path="res://Cenas/timer.tscn" type="PackedScene" id=26]
[ext_resource path="res://imagens/relogio_rewind/sprite_sheet_relogio.png" type="Texture" id=27]
[ext_resource path="res://imagens/botao_pause.png" type="Texture" id=28]
[ext_resource path="res://imagens/pause_escuro.png" type="Texture" id=29]
[ext_resource path="res://Cenas/pause.tscn" type="PackedScene" id=30]

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 27 )
region = Rect2( 1, 1, 33, 33 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 27 )
region = Rect2( 34, 1, 33, 33 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 27 )
region = Rect2( 67, 1, 33, 33 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 27 )
region = Rect2( 1, 34, 33, 33 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 27 )
region = Rect2( 34, 34, 33, 33 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 27 )
region = Rect2( 67, 34, 33, 33 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 27 )
region = Rect2( 1, 67, 33, 33 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 27 )
region = Rect2( 34, 67, 33, 33 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 27 )
region = Rect2( 67, 67, 33, 33 )

[sub_resource type="SpriteFrames" id=18]
animations = [ {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ) ],
"loop": true,
"name": "default",
"speed": 3.0
} ]

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 106, 0, 53, 80 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 53, 80 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 212, 0, 53, 80 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 318, 0, 53, 80 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 10 ), ExtResource( 9 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ) ],
"loop": true,
"name": "Dash",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ), SubResource( 4 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 2 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 8 ) ],
"loop": true,
"name": "Run",
"speed": 10.0
}, {
"frames": [  ],
"loop": true,
"name": "clock",
"speed": 5.0
}, {
"frames": [ ExtResource( 16 ), ExtResource( 18 ), ExtResource( 17 ), ExtResource( 15 ) ],
"loop": true,
"name": "jump",
"speed": 3.0
}, {
"frames": [ ExtResource( 24 ), ExtResource( 23 ), ExtResource( 19 ), ExtResource( 22 ), ExtResource( 21 ), ExtResource( 20 ) ],
"loop": true,
"name": "rewind",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 24.6938, 38.25 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 18, 0.5 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 26.5, 38 )

[sub_resource type="StyleBoxTexture" id=21]
texture = ExtResource( 28 )
region_rect = Rect2( 0, 0, 33, 33 )

[sub_resource type="StyleBoxTexture" id=19]
texture = ExtResource( 29 )
region_rect = Rect2( 0, 0, 33, 33 )

[sub_resource type="StyleBoxTexture" id=20]
texture = ExtResource( 28 )
region_rect = Rect2( 0, 0, 33, 33 )

[node name="Player" type="KinematicBody2D"]
pause_mode = 1
position = Vector2( -930, 327 )
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
pause_mode = 1
position = Vector2( 37, -75 )
scale = Vector2( 1.18182, 1.18182 )
frames = SubResource( 18 )
centered = false

[node name="timer" parent="." instance=ExtResource( 26 )]

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( -30, -40 )
scale = Vector2( 1.1236, 0.977045 )
frames = SubResource( 2 )
animation = "Idle"
frame = 3
playing = true
centered = false

[node name="shape" type="CollisionShape2D" parent="."]
position = Vector2( 3.30615, 0.25 )
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
limit_top = 0
limit_bottom = 645
drag_margin_h_enabled = true
drag_margin_left = 0.3
drag_margin_top = 0.54
drag_margin_bottom = 0.3
editor_draw_limits = true
editor_draw_drag_margin = true

[node name="pes" type="Area2D" parent="."]
position = Vector2( 3, 38 )
collision_layer = 4
collision_mask = 4
__meta__ = {
"_edit_group_": true
}

[node name="shape" type="CollisionShape2D" parent="pes"]
position = Vector2( 5, 0.5 )
shape = SubResource( 3 )

[node name="dano" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="shape" type="CollisionShape2D" parent="dano"]
position = Vector2( 3.5, -2 )
shape = SubResource( 8 )

[node name="JumpFx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 25 )

[node name="hud" type="CanvasLayer" parent="."]

[node name="pausar" type="Button" parent="hud"]
margin_left = 921.0
margin_top = 31.0
margin_right = 972.0
margin_bottom = 80.0
custom_styles/hover = SubResource( 21 )
custom_styles/pressed = SubResource( 19 )
custom_styles/normal = SubResource( 20 )

[node name="pause" parent="." instance=ExtResource( 30 )]

[connection signal="body_entered" from="pes" to="." method="_on_pes_body_entered"]
[connection signal="body_entered" from="dano" to="." method="_on_dano_body_entered"]
[connection signal="pressed" from="hud/pausar" to="." method="_on_pausar_pressed"]
